# seal

./: .gitignore  CMakeLists.txt  LICENSE  README.md  benchmark.py  test.cola  test2.cola
doc/: highlight.pack.js
docs/: index.html  old_types.html
docs/resources/: ebr.tex  hp.tex
examples/: MichaelScottQueue_transformed.cola  MichaelSet.cpp  VechevCasSet.cola  ebr.smr  hp.smr  hp2.smr  hp_forward_transfer.smr  hp_monolith.smr  hp_no_transfer.smr  queue_spec.cav
examples/CustomTypes/: ebr_types.smr  hp_guarantees_forward_transfer.smr  hp_guarantees_no_transfer.smr
examples/EBR/: DGLM.cola  HarrisSet_transformed.cola  MichaelScottQueue.cola  MichaelScottQueue_transformed.cola  MichaelSet.cola  OHearnSet.cola  OhearnSet_transformed.cola  TreiberOptimizedStack.cola  TreiberStack.cola  VechevCasSet.cola  VechevCasSet_transformed.cola  VechevDCasSet.cola
examples/HP/: DGLM.cola  DGLM_transformed.cola  MichaelScottQueue.cola  MichaelScottQueue_transformed.cola  MichaelSet.cola  MichaelSet_transformed.cola  OHearnSet.cola  OHearnSet_transformed.cola  TreiberOptimizedStack.cola  TreiberOptimizedStack_transformed.cola  TreiberStack.cola  TreiberStack_transformed.cola  VechevCasSet.cola  VechevCasSet_transformed.cola  VechevDCasSet.cola  VechevDCasSet_transformed.cola
examples/safe/: msq.cola  msq_enqueue.cola  msq_peeled.cola  safe_01.cola  safe_04.cola  safe_06.cola  safe_08.cola
examples/unsafe/: unsafe_05.cola
src/: CMakeLists.txt
src/ast/: ast.hpp
src/cola/: CMakeLists.txt  ast.hpp  observer.hpp  parse.hpp  transform.hpp  util.hpp
src/cola/parser/: AstBuilder.cpp  AstBuilder.hpp  CoLa.g4  ObserverBuilder.cpp  ObserverBuilder.hpp  TypeBuilder.hpp  parse.cpp
src/cola/parser/antlr/: ExternalAntlr4Cpp.cmake
src/cola/transform/: rmCAS.cpp  rmConditionals.cpp  rmJumps.cpp  rmScopedVars.cpp  rmUselessScopes.cpp  simplifyExpr.cpp
src/cola/util/: cpExpr.cpp  cpObserver.cpp  cpStmt.cpp  negExpr.cpp  print.cpp
src/common/: CMakeLists.txt  cross_product.cpp  cross_product.hpp
src/parser/: AstBuilder.cpp  AstBuilder.hpp  AstBuilder_old.cpp  CMakeLists.txt  CoLa.g4  Pexl.g4  TypeBuilder.hpp  parse.cpp  parse.hpp
src/parser/antlr/: ExternalAntlr4Cpp.cmake
src/related/: CMakeLists.txt  observer_post.cpp
src/simplification/: CMakeLists.txt  rmCAS.cpp  rmConditionals.cpp  rmJumps.cpp  rmScopedVars.cpp  rmUselessScopes.cpp  simplify.hpp  simplifyExpr.cpp
src/types/: CMakeLists.txt  assumption.hpp  cave.cpp  cave.hpp  check.cpp  check.hpp  checker.hpp  checker_accept.cpp  checker_check.cpp  config.hpp  error.hpp  factory.cpp  factory.hpp  guarantees.cpp  guarantees.hpp  inference.cpp  inference.hpp  observer.cpp  observer.hpp  preprocess.cpp  preprocess.hpp  rmraces.cpp  rmraces.hpp  simulation.cpp  simulation.hpp  sobserver.cpp  sobserver.hpp  synthesis.cpp  synthesis.hpp  test.cpp  types.cpp  types.hpp  util.cpp  util.hpp
src/types/cave/: ExternalCave.cmake
src/types/check/: check.cpp  check_impl.cpp  check_impl.hpp  check_impl_assertassume.cpp
src/types/vata2/: ExternalVata2.cmake
src/util/: CMakeLists.txt  cpExpr.cpp  print.cpp  util.hpp
test/: CMakeLists.txt  Main.cpp  leap.cpp
test/examples/: DGLM.cola  DGLM_transformed.cola  MSQ.cola  MichaelSet.cola  MichaelSet.cpp  MichaelSet_transformed.cola  OHearnSet.cola  OHearnSet_adapt.cola  OHearnSet_ext.cola  OHearnSet_ext_rewrite.cola  OHearnSet_transformed.cola  TreiberStack_transformed.cola  Treibers.cola  VechevCasSet.cola  VechevCasSet_transformed.cola  VechevDCasSet.cola  VechevDCasSet_transformed.cola  set_spec.cav  stack_spec.cav
test/examples/safe/: msq_dequeue_peeled.cola  safe_05.cola
test/examples/unsafe/: unsafe_03.cola  unsafe_07.cola
test/safe/: msq.cola  msq_dequeue.cola  msq_dequeue_peeled.cola  msq_enqueue.cola  msq_enqueue_peeled.cola  msq_peeled.cola  safe_02.cola  safe_03.cola  safe_06.cola
test/tclap/: ExternalTclap.cmake
test/unsafe/: unsafe_01.cola  unsafe_02.cola  unsafe_04.cola  unsafe_06.cola
